# waterfront-paradise-map-project

./: .env.example  .gitignore  CHANGELOG.md  README.md  SPECIFICATIONS.md  pyproject.toml
.github/workflows/: deploy.yml
config/: aoi.geojson  aoi_buffered.geojson  aoi_near_coast.geojson  aoi_source.geojson  basemaps.yaml  build.yaml  color_scheme.yaml  highlights.yaml  layers.yaml  mandatory_locations.yaml
content/it/: README.md
content/it/slides/: 00_intro.md  01_wetlands.md
data/: catalog.yaml  publish_manifest.yaml
data/processed/: style.json
docs/research/: crs_choices.md  data_sources.md  mapbox.md  mcp_mapbox.md
plans/: 00_overview.md  01_data_acquisition.md  02_data_processing.md  03_storage_catalog.md  04_mapbox_integration.md  05_web_app.md  06_storymap.md  07_mcp_hooks.md  08_testing.md  09_deployment.md  10_3d_basemap.md
scripts/: build_aoi.py  build_terrain_mbtiles.py
src/manfredonia_map/: __init__.py  cli.py  paths.py
src/manfredonia_map/acquisition/: __init__.py  base.py  cli.py  emodnet.py  http.py  ispra.py  istat.py  mase.py  osm.py  regione_puglia.py  tinitaly.py  vir.py
src/manfredonia_map/aoi/: __init__.py  builder.py  cli.py  io.py  sanity.py
src/manfredonia_map/catalog/: __init__.py  builder.py  cli.py  models.py
src/manfredonia_map/processing/: __init__.py  base.py  cli.py  hillshade.py  mandatory.py  normalize.py  raster.py  terrain_rgb.py
src/manfredonia_map/publishing/: __init__.py  cli.py  manifest.py  settings.py  styles.py  tippecanoe.py  uploads_api.py
tests/: conftest.py
tests/unit/: test_acquisition_base.py  test_acquisition_cli.py  test_acquisition_emodnet.py  test_acquisition_http.py  test_acquisition_ispra.py  test_acquisition_istat.py  test_acquisition_mase.py  test_acquisition_osm.py  test_acquisition_regione_puglia.py  test_acquisition_tinitaly.py  test_acquisition_vir.py  test_aoi_builder.py  test_aoi_cli.py  test_aoi_io.py  test_aoi_sanity.py  test_catalog_builder.py  test_processing_base.py  test_processing_cli.py  test_processing_hillshade.py  test_processing_mandatory.py  test_processing_normalize.py  test_processing_raster.py  test_processing_terrain_rgb.py  test_publishing.py  test_publishing_styles.py  test_publishing_uploads.py
webapp/: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/scripts/: inspect-map.mjs  shoot-terrain.mjs  sync-config.mjs
webapp/src/: env.ts  main.ts  paths.ts  style.css  types.ts
webapp/src/config/: catalog.ts  loader.ts
webapp/src/content/: loader.ts  slides.ts
webapp/src/io/: geojson-file.ts
webapp/src/map/: basemap-apply.ts  init.ts  style-loader.ts  style-merge.ts
webapp/src/state/: layer-state.ts  overlays.ts  story-controller.ts
webapp/src/ui/: basemap-control.ts  chrome.ts  drop-zone.ts  highlights.ts  layer-panel.ts  overlay-list.ts  story-panel.ts
webapp/src/ui/icons/: marker-icons.ts
webapp/tests/: basemap-apply.test.ts  basemap-control.test.ts  catalog.test.ts  chrome.test.ts  config-loader.test.ts  content-loader.test.ts  drop-zone.test.ts  geojson-file.test.ts  highlights-config.test.ts  highlights.test.ts  layer-panel.test.ts  layer-state.test.ts  loader-frontmatter.test.ts  overlay-list.test.ts  overlays.test.ts  slides.test.ts  story-controller.test.ts  story-panel.test.ts  style-3d.test.ts  style-loader.test.ts  style-merge.test.ts
